lab-04/np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mongo-db-network-policy
  namespace: fiszki
spec:
  podSelector:
    matchLabels:
      app: mongodb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: fiszki
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: fiszki
